--- a/doctor/templates/doctor/doctor-appointment-update.htm
+++ b/doctor/templates/doctor/doctor-appointment-update.htm
@@ -12,7 +12,7 @@
             <div class="col-md-8">
                <div class="block ">
                   <h4 class="widget-title">Appointment Form</h4>
-                  <form class="checkout-form" method="POST" action="/doctor/appointment/{{doc_image.doctor.id}}/">
+                  <form class="checkout-form" method="POST" action="/doctor/appointment/update/{{doc_image.doctor.id}}/">
                      {% csrf_token %}
                      <div class="form-group">
                         <label for="user_address">Patient Name</label>
@@ -42,12 +42,12 @@
                            <p class="help">{{form.description.errors }}</p>
                         </div>
                         <div class="form-group">
-                           <!-- <label for="user_address">Write about your health issue</label> -->
+                           <label for="user_address">Appointment Date</label>
                            {{form.fixed_on}}
                            <p class="help">{{form.fixed_on.errors }}</p>
                         </div>
                      
-                        <button type="submit" class="btn btn-main text-center" >Book appointment</button>
+                        <button type="submit" class="btn btn-main text-center" >Update appointment</button>
                   </form>
                </div>
             </div>
